clusters/constellation/apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      securityContext:
        fsGroup: 9999
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:2.20.0
        ports:
        - containerPort: 8080
        securityContext:
          runAsNonRoot: true
          runAsUser: 9999
        volumeMounts:
        - name: data
          mountPath: /audiobooks
          subPath: audiobooks
        - name: data
          mountPath: /podcasts
          subPath: podcasts
        - name: data
          mountPath: /config
          subPath: config
        - name: data
          mountPath: /metadata
          subPath: metadata
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: audiobookshelf-dynamic
